# chat-with-pillow

./: manage.py  package-lock.json  pyproject.toml  requirements.txt
account/: forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/account/: account.html  edit_account.html  register.html  search_results.html
chatizone/: asgi.py  settings.py  urls.py  wsgi.py
friend/: models.py  views.py
friend/migrations/: 0001_initial.py
friend/templates/friend/: friend_list.html
friend/templates/friend/snippets/: decline_friend_request.html  remove_friend.html
personal/templates/personal/: home.html
templates/: base.html
templates/snippets/: header.html
